--- a/templates/index.html
+++ b/templates/index.html
@@ -7,81 +7,87 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>하트시그널 심장소리 녹음</title>
     <link href="{{ url_for('static', filename='css/output.css') }}" rel="stylesheet">
+        <link href="/static/css/branding.css" rel="stylesheet" />
 </head>
 
-<body>
-    <h1 class="text-4xl font-bold my-5">HeartSignal Record and Analyse</h1>
-    <p id="status" class="text-lg mb-3">Ready to record</p>
-    <button id="recordButton" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded my-2">Start Recording</button>
-    <button id="stopButton" class="bg-red-500 hover:bg-red-700 text-white font-bold py-2 px-4 rounded my-2" disabled>Stop Recording</button>
-     <script>
-        let mediaRecorder;
-        let audioChunks = [];
-        let mediaStream;
+<body class="bg-gray-100"> <!-- Adjusted the background color to match the design aesthetic -->
+    <div class="min-h-screen flex flex-col justify-center items-center"> <!-- Flex container to center content -->
+        <h1 class="text-4xl font-bold my-5 text-center">HeartSignal Record and Analyse</h1>
+        <p id="status" class="text-lg mb-3 text-center">Ready to record</p>
+        <div class="flex flex-col space-y-2"> <!-- Stack buttons vertically -->
+            <button id="recordButton" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">Start
+                Recording</button>
+            <button id="stopButton" class="bg-red-500 hover:bg-red-700 text-white font-bold py-2 px-4 rounded"
+                disabled>Stop Recording</button>
+        </div>
+        <script>
+            let mediaRecorder;
+            let audioChunks = [];
+            let mediaStream;
 
-        document.getElementById("recordButton").addEventListener("click", function () {
-            navigator.mediaDevices.getUserMedia({ audio: true })
-                .then(stream => {
-                    mediaStream = stream;  // 스트림 저장
-                    mediaRecorder = new MediaRecorder(stream);
-                    mediaRecorder.start();
+            document.getElementById("recordButton").addEventListener("click", function () {
+                navigator.mediaDevices.getUserMedia({ audio: true })
+                    .then(stream => {
+                        mediaStream = stream;  // 스트림 저장
+                        mediaRecorder = new MediaRecorder(stream);
+                        mediaRecorder.start();
 
-                    document.getElementById("status").innerText = "Recording...";
+                        document.getElementById("status").innerText = "Recording...";
 
-                    mediaRecorder.addEventListener("dataavailable", event => {
-                        audioChunks.push(event.data);
-                    });
-
-                    mediaRecorder.addEventListener("stop", () => {
-                        document.getElementById("status").innerText = "Recording stopped. Uploading...";
-
-                        const audioBlob = new Blob(audioChunks);
-                        const formData = new FormData();
-                        formData.append("audioFile", audioBlob);
-
-                        fetch("/upload", {
-                            method: "POST",
-                            body: formData
-                        }).then(response => {
-                            if (response.ok) {
-                                return response.text();
-                            }
-                            throw new Error('Network response was not ok.');
-                        }).then(data => {
-                            document.getElementById("status").innerText = "Upload and processing complete. ";
-                            // 스펙트로그램 이미지 링크 추가
-                            let imgLink = document.createElement('a');
-                            imgLink.href = data.split('Image URL: ')[1];
-                            imgLink.innerText = 'View Spectrogram';
-                            imgLink.target = '_blank';
-                            document.getElementById("status").appendChild(imgLink);
-                        }).catch(error => {
-                            console.error('There has been a problem with your fetch operation:', error);
-                            document.getElementById("status").innerText = "Upload failed.";
+                        mediaRecorder.addEventListener("dataavailable", event => {
+                            audioChunks.push(event.data);
                         });
 
-                        audioChunks = [];
+                        mediaRecorder.addEventListener("stop", () => {
+                            document.getElementById("status").innerText = "Recording stopped. Uploading...";
+
+                            const audioBlob = new Blob(audioChunks);
+                            const formData = new FormData();
+                            formData.append("audioFile", audioBlob);
+
+                            fetch("/upload", {
+                                method: "POST",
+                                body: formData
+                            }).then(response => {
+                                if (response.ok) {
+                                    return response.text();
+                                }
+                                throw new Error('Network response was not ok.');
+                            }).then(data => {
+                                document.getElementById("status").innerText = "Upload and processing complete. ";
+                                // 스펙트로그램 이미지 링크 추가
+                                let imgLink = document.createElement('a');
+                                imgLink.href = data.split('Image URL: ')[1];
+                                imgLink.innerText = 'View Spectrogram';
+                                imgLink.target = '_blank';
+                                document.getElementById("status").appendChild(imgLink);
+                            }).catch(error => {
+                                console.error('There has been a problem with your fetch operation:', error);
+                                document.getElementById("status").innerText = "Upload failed.";
+                            });
+
+                            audioChunks = [];
+                        });
+
+                        this.disabled = true;
+                        document.getElementById("stopButton").disabled = false;
+                    }).catch(error => {
+                        console.error('Error accessing media devices:', error);
+                        document.getElementById("status").innerText = "Error accessing media devices.";
                     });
+            });
 
-                    this.disabled = true;
-                    document.getElementById("stopButton").disabled = false;
-                }).catch(error => {
-                    console.error('Error accessing media devices:', error);
-                    document.getElementById("status").innerText = "Error accessing media devices.";
-                });
-        });
+            document.getElementById("stopButton").addEventListener("click", function () {
+                mediaRecorder.stop();
 
-        document.getElementById("stopButton").addEventListener("click", function () {
-            mediaRecorder.stop();
+                // 마이크 스트림 닫기
+                mediaStream.getTracks().forEach(track => track.stop());
 
-            // 마이크 스트림 닫기
-            mediaStream.getTracks().forEach(track => track.stop());
-
-            document.getElementById("status").innerText = "Stopping recording...";
-            this.disabled = true;
-            document.getElementById("recordButton").disabled = false;
-        });
-    </script>
+                document.getElementById("status").innerText = "Stopping recording...";
+                this.disabled = true;
+                document.getElementById("recordButton").disabled = false;
+            });
+        </script>
 </body>
 
 </html>
