--- a/templates/index.html
+++ b/templates/index.html
@@ -18,10 +18,15 @@
     <div class="my-1 text-center">
       <div>현재 하트시그널은 베타테스트 중입니다.</div>
       <div>
-        녹음하신 파일은 클라우드에 저장되어 테스트 기간(~2월 20일) 동안
-        보유됩니다.
+        녹음하신 파일은 클라우드에 저장되며,
+      </div>
+      <div>테스트 기간(~2월 20일) 동안 보유됩니다.
+      </div>
+      <div id="resultContainer" class="mt-5">
+        <img src="{{ url_for('static', filename='img/heartsignal.png') }}" alt="Heart Signal Image" class="mb-3">
       </div>
     </div>
+    <div class="text-center">스마트폰 마이크를 왼쪽 유두 아래 늑골에 붙이고 녹음하세요.</div>
     <div id="resultContainer" class="mt-5">
     </div>
   </div>
