hide the guide image and instruction conditionnaly after the first recording

--- a/templates/index.html
+++ b/templates/index.html
@@ -22,12 +22,10 @@
       </div>
       <div>테스트 기간(~2월 20일) 동안 보유됩니다.
       </div>
-      <div id="resultContainer" class="mt-5">
         <img src="{{ url_for('static', filename='img/heartsignal.png') }}" alt="Heart Signal Image" class="mb-3">
-      </div>
+      <div id="description" class="text-center">스마트폰 마이크를 왼쪽 유두 아래 늑골에 붙이고 녹음하세요.</div>
     </div>
-    <div class="text-center">스마트폰 마이크를 왼쪽 유두 아래 늑골에 붙이고 녹음하세요.</div>
-    <div id="resultContainer" class="mt-5">
+    <div id="resultContainer" class="mt-5" style="margin-bottom: 100px;">
     </div>
   </div>
   <div class="fixed bottom-10 w-full bg-gray-200">
